--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TUALMI - Sustainable Women's Outdoor Fashion</title>
-    <meta name="description" content="Adventure meets style. Sustainable outdoor fashion designed for women who love the outdoors and want to look incredible doing it.">
-    
+    <meta name="description" content="California-born and women-led, we create sustainable outdoor gear that blends fashion and function—made by women, for women who adventure in style.">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
