--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@
         .product-image {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+            object-fit: contain;
+            background-color: var(--cream);
         }
+
 
         .product-card:hover .product-image {
             transform: scale(1.08);
