fixed product images

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                     <p class="product-price">$80</p>
                     <div class="color-carousel">
                         <div class="color-swatch active" style="background: #f5f5f5;" data-image="/images/white-pants.png"></div>
-                        <div class="color-swatch" style="background: #6b5648;" data-image="/images/brown-pants-bg.png"></div>
+                        <div class="color-swatch" style="background: #6b5648;" data-image="images/brown-pants-bg.png"></div>
                     </div>
                 </div>
             </div>
@@ -655,7 +655,7 @@
                     <p class="product-price">$90</p>
                     <div class="color-carousel">
                         <div class="color-swatch active" style="background: #5a6650;" data-image="/images/olive-pants-bg.png"></div>
-                        <div class="color-swatch" style="background: #7a7a7a;" data-image="/images/gray-pants-bg.png"></div>
+                        <div class="color-swatch" style="background: #7a7a7a;" data-image="images/gray-pants-bg.png"></div>
                     </div>
                 </div>
             </div>
