--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
             <p class="mission">Thoughtfully designed outdoor wear for women who seek adventure without compromise. Sustainably crafted, elegantly refined.</p>
             <div class="eco-badge">
                 <span>●</span>
-                <span>ECO-CONSCIOUS</span>
+                <span>SUSTAINABLE</span>
             </div>
         </div>
     </section>
@@ -618,7 +618,7 @@
     <section class="collection" id="collection">
         <div class="collection-header">
             <h2 class="section-title">Debut Collection</h2>
-            <p class="section-subtitle">Timeless essentials for your next journey</p>
+            <p class="section-subtitle">Elevated essentials for your next journey</p>
         </div>
         
         <div class="product-grid">
