--- a/products/horizon-shorts.html
+++ b/products/horizon-shorts.html
@@ -71,7 +71,7 @@
           <button id="addToCartBtn" class="add-btn">Pre-order</button>
         </div>
 
-        <p class="micro">Ships in late November · Free returns · Limited pre-order</p>
+        <p class="micro">Free returns · Sustainable materials · Limited run</p>
 
         <div id="miniCart" class="mini-cart" aria-live="polite" hidden>
           <!-- <div class="mini-text">Added to cart</div> -->
