--- a/index.html
+++ b/index.html
@@ -7,587 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        :root {
-            --chocolate: #4a3428;
-            --soft-brown: #8b7355;
-            --dusty-rose: #d4a5a5;
-            --blush: #f5c6cb;
-            --cream: #faf8f5;
-            --off-white: #ffffff;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            color: var(--chocolate);
-            background: var(--off-white);
-            overflow-x: hidden;
-            -webkit-font-smoothing: antialiased;
-            scroll-behavior: smooth;
-        }
-
-        .nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            padding: 24px 48px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(255, 255, 255, 0.92);
-            backdrop-filter: blur(20px);
-            z-index: 1000;
-            border-bottom: 1px solid rgba(74, 52, 40, 0.08);
-        }
-
-        .logo {
-            height: 68px;
-            opacity: 0.95;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 48px;
-            font-size: 13px;
-            letter-spacing: 1.5px;
-            font-weight: 400;
-        }
-
-        .nav-links a {
-            color: var(--chocolate);
-            text-decoration: none;
-            transition: opacity 0.3s ease;
-            position: relative;
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            bottom: -4px;
-            left: 0;
-            width: 0;
-            height: 1px;
-            background: var(--dusty-rose);
-            transition: width 0.3s ease;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
-        }
-
-        .hero {
-            height: 100vh;
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
-
-        .hero-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            filter: brightness(0.75) saturate(1.1);
-        }
-
-        .hero-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(180deg, rgba(212,165,165,0.35) 0%, rgba(74,52,40,0.45) 100%);
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-            text-align: center;
-            color: white;
-            padding: 48px;
-            max-width: 800px;
-            opacity: 0;
-            transform: translateY(40px);
-            animation: fadeInUp 1.2s ease forwards 0.4s;
-        }
-
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .brand-name {
-            font-family: 'Cormorant', serif;
-            font-size: 92px;
-            font-weight: 300;
-            letter-spacing: 12px;
-            margin-bottom: 32px;
-            text-transform: lowercase;
-        }
-
-        .mission {
-            font-size: 17px;
-            line-height: 1.8;
-            font-weight: 300;
-            letter-spacing: 0.5px;
-            margin-bottom: 40px;
-            opacity: 0.95;
-        }
-
-        .eco-badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 10px 24px;
-            border: 1px solid rgba(255, 255, 255, 0.4);
-            border-radius: 24px;
-            font-size: 11px;
-            letter-spacing: 1.8px;
-            text-transform: uppercase;
-            font-weight: 400;
-            backdrop-filter: blur(10px);
-            background: rgba(255, 255, 255, 0.08);
-        }
-
-        .collection {
-            padding: 140px 48px 120px;
-            max-width: 1320px;
-            margin: 0 auto;
-        }
-
-        .collection-header {
-            text-align: center;
-            margin-bottom: 100px;
-        }
-
-        .section-title {
-            font-family: 'Cormorant', serif;
-            font-size: 54px;
-            color: var(--chocolate);
-            margin-bottom: 16px;
-            letter-spacing: 2px;
-            font-weight: 300;
-        }
-
-        .section-subtitle {
-            font-size: 15px;
-            color: var(--soft-brown);
-            font-weight: 300;
-            letter-spacing: 0.5px;
-        }
-
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 40px 32px;
-        }
-
-        .product-card {
-            cursor: pointer;
-            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            opacity: 0;
-            transform: translateY(60px);
-            background: var(--off-white);
-            text-decoration: none; /* removes underline */
-            color: inherit; /* keeps the text color the same */
-        }
-
-        
-
-        .product-card.visible {
-            animation: fadeInUp 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-        }
-
-        .product-card:hover {
-            transform: translateY(-8px);
-        }
-
-        .product-image-container {
-            position: relative;
-            aspect-ratio: 3/4;
-            overflow: hidden;
-            background: var(--cream);
-            margin-bottom: 20px;
-            border-radius: 2px;
-        }
-
-        .product-image {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            background-color: var(--cream);
-        }
-
-
-        .product-card:hover .product-image {
-            transform: scale(1.08);
-        }
-
-        .product-badge {
-            position: absolute;
-            top: 16px;
-            right: 16px;
-            background: var(--off-white);
-            color: var(--chocolate);
-            padding: 6px 14px;
-            border-radius: 20px;
-            font-size: 10px;
-            letter-spacing: 1.4px;
-            text-transform: uppercase;
-            font-weight: 500;
-            box-shadow: 0 2px 12px rgba(0,0,0,0.08);
-        }
-
-        .product-info {
-            padding: 4px 8px;
-        }
-
-        .product-name {
-            font-family: 'Cormorant', serif;
-            font-size: 24px;
-            color: var(--chocolate);
-            margin-bottom: 6px;
-            letter-spacing: 0.5px;
-            font-weight: 400;
-        }
-
-        .product-price {
-            font-size: 16px;
-            color: var(--soft-brown);
-            font-weight: 400;
-            margin-bottom: 16px;
-            letter-spacing: 0.3px;
-        }
-
-        .color-carousel {
-            display: flex;
-            gap: 8px;
-            margin-top: 16px;
-        }
-
-        .color-swatch {
-            width: 28px;
-            height: 28px;
-            border-radius: 50%;
-            border: 2px solid transparent;
-            cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-        }
-
-        .color-swatch:hover {
-            transform: scale(1.15);
-            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-        }
-
-        .color-swatch.active {
-            border-color: var(--chocolate);
-            box-shadow: 0 0 0 1px var(--cream), 0 2px 8px rgba(0,0,0,0.15);
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(74, 52, 40, 0.5);
-            backdrop-filter: blur(8px);
-            z-index: 2000;
-            justify-content: center;
-            align-items: center;
-            opacity: 0;
-            transition: opacity 0.4s ease;
-        }
-
-        .modal.active {
-            display: flex;
-            opacity: 1;
-        }
-
-        .modal-content {
-            background: var(--off-white);
-            padding: 64px 56px;
-            max-width: 520px;
-            width: 90%;
-            position: relative;
-            border-radius: 2px;
-            transform: scale(0.95) translateY(20px);
-            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 24px 48px rgba(0,0,0,0.2);
-        }
-
-        .modal.active .modal-content {
-            transform: scale(1) translateY(0);
-        }
-
-        .close-modal {
-            position: absolute;
-            top: 24px;
-            right: 24px;
-            font-size: 28px;
-            cursor: pointer;
-            color: var(--soft-brown);
-            background: none;
-            border: none;
-            padding: 0;
-            width: 32px;
-            height: 32px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: color 0.3s ease;
-        }
-
-        .close-modal:hover {
-            color: var(--chocolate);
-        }
-
-        .modal-product-name {
-            font-family: 'Cormorant', serif;
-            font-size: 36px;
-            color: var(--chocolate);
-            margin-bottom: 8px;
-            letter-spacing: 0.5px;
-            font-weight: 400;
-        }
-
-        .modal-product-price {
-            font-size: 20px;
-            color: var(--soft-brown);
-            margin-bottom: 40px;
-            font-weight: 400;
-            letter-spacing: 0.3px;
-        }
-
-        .preorder-form {
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
-        }
-
-        .form-group {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .form-label {
-            font-size: 11px;
-            letter-spacing: 1.5px;
-            text-transform: uppercase;
-            color: var(--soft-brown);
-            margin-bottom: 10px;
-            font-weight: 500;
-        }
-
-        .form-input {
-            padding: 16px 18px;
-            border: 1px solid rgba(74, 52, 40, 0.15);
-            background: var(--off-white);
-            font-size: 15px;
-            font-family: 'Inter', sans-serif;
-            color: var(--chocolate);
-            transition: all 0.3s ease;
-            border-radius: 2px;
-        }
-
-        .form-input:focus {
-            outline: none;
-            border-color: var(--dusty-rose);
-            box-shadow: 0 0 0 3px rgba(212, 165, 165, 0.1);
-        }
-
-        .submit-btn {
-            padding: 18px 32px;
-            background: var(--chocolate);
-            color: var(--off-white);
-            border: none;
-            cursor: pointer;
-            font-size: 12px;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            transition: all 0.3s ease;
-            font-family: 'Inter', sans-serif;
-            font-weight: 500;
-            border-radius: 2px;
-            margin-top: 8px;
-        }
-
-        .submit-btn:hover {
-            background: var(--soft-brown);
-            transform: translateY(-2px);
-            box-shadow: 0 8px 16px rgba(74, 52, 40, 0.2);
-        }
-
-        .success-message {
-            display: none;
-            text-align: center;
-            padding: 48px 24px;
-        }
-
-        .success-message.active {
-            display: block;
-        }
-
-        .success-icon {
-            width: 64px;
-            height: 64px;
-            margin: 0 auto 24px;
-            background: var(--blush);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 32px;
-            color: var(--chocolate);
-        }
-
-        .success-title {
-            font-family: 'Cormorant', serif;
-            font-size: 32px;
-            color: var(--chocolate);
-            margin-bottom: 16px;
-            font-weight: 400;
-        }
-
-        .success-text {
-            font-size: 15px;
-            line-height: 1.7;
-            color: var(--soft-brown);
-            font-weight: 300;
-        }
-
-        .footer {
-            background: var(--cream);
-            padding: 120px 48px 80px;
-            border-top: 1px solid rgba(74, 52, 40, 0.15);
-        }
-
-        .footer-content {
-            max-width: 1320px;
-            margin: 0 auto;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 48px;
-            margin-bottom: 60px;
-        }
-
-        .footer-section {
-            opacity: 0;
-            transform: translateY(30px);
-        }
-
-        .footer-section.visible {
-            animation: fadeInUp 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-        }
-
-        .footer-title {
-            font-family: 'Cormorant', serif;
-            font-size: 20px;
-            color: var(--chocolate);
-            margin-bottom: 16px;
-            letter-spacing: 0.5px;
-            font-weight: 400;
-        }
-
-        .footer-text {
-            font-size: 14px;
-            line-height: 1.8;
-            color: var(--soft-brown);
-            font-weight: 300;
-        }
-
-        .footer-bottom {
-            text-align: center;
-            padding-top: 40px;
-            border-top: 1px solid rgba(74, 52, 40, 0.08);
-        }
-
-        .footer-tagline {
-            font-family: 'Cormorant', serif;
-            font-size: 18px;
-            color: var(--chocolate);
-            margin-bottom: 12px;
-            font-style: italic;
-            font-weight: 300;
-        }
-
-        .footer-copyright {
-            font-size: 12px;
-            color: var(--soft-brown);
-            letter-spacing: 0.5px;
-            opacity: 0.7;
-        }
-
-        @media (max-width: 1024px) {
-            .product-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-
-            .footer-grid {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 40px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .nav {
-                padding: 20px 24px;
-            }
-
-            .nav-links {
-                gap: 32px;
-                font-size: 12px;
-            }
-
-            .brand-name {
-                font-size: 56px;
-                letter-spacing: 8px;
-            }
-
-            .mission {
-                font-size: 15px;
-            }
-
-            .collection {
-                padding: 100px 24px 80px;
-            }
-
-            .product-grid {
-                grid-template-columns: 1fr;
-                gap: 48px;
-            }
-
-            .modal-content {
-                padding: 48px 32px;
-            }
-
-            .section-title {
-                font-size: 42px;
-            }
-
-            .footer-grid {
-                grid-template-columns: 1fr;
-                gap: 36px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <nav class="nav">
@@ -857,6 +277,26 @@
                 }
             });
         });
+
+        // Prevent color swatch clicks from following the product link
+        document.querySelectorAll('.color-swatch').forEach(swatch => {
+            swatch.addEventListener('click', function(e) {
+                e.preventDefault(); // stop the link from opening
+                e.stopPropagation(); // stop the click from bubbling to the card
+
+                const productCard = this.closest('.product-card');
+                const image = productCard.querySelector('.product-image');
+
+                // Update active swatch
+                productCard.querySelectorAll('.color-swatch').forEach(s => s.classList.remove('active'));
+                this.classList.add('active');
+
+                // Update product image
+                const newImage = this.dataset.image;
+                image.src = newImage;
+            });
+        });
+
     </script>
 </body>
 </html>
