--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             e.preventDefault();
             const form = e.target;
             
-            fetch('https://tualmi-website.onrender.com/create-checkout-session', {
+            fetch('https://tualmi-website.onrender.com/api/...', {
 
                 method: 'POST',
                 headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
